Fix dropdown list shift on hover

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -140,6 +140,7 @@ body,html{
 
 header{
     display: flex;
+    justify-content: center;
 }
 
 /*Book Logo*/
@@ -159,7 +160,7 @@ header{
 /*Font Dropdown List*/
 #font-dropdown-list p{
     position: relative;
-    top: 25px;
+    top: 10px;
     left: 30px;
     width: 90px;
     height: 24px;
@@ -172,8 +173,6 @@ header{
     height: 140px;
     border-radius: 16px;
     box-shadow: var(--box-shadow);
-    position: relative;
-    right: 90px;
     display: none;
 }
 
@@ -192,7 +191,6 @@ header{
     padding-left: 20px;
     padding-top: 8px;
 }
-
 
 /*Font Types*/
 #sans-serif{
@@ -295,4 +293,39 @@ input:checked + .slider:before{
 /*Toggle and Moon Icon Group*/
 .toggle-switch-and-moon-icon{
     display: flex; 
+}
+
+/*Align Header Items*/
+header{
+    margin-top: 20px;
+}
+
+#book-logo{
+    position: relative;
+    right: 30px;
+}
+
+.toggle-switch-and-moon-icon,
+#font-dropdown-menu{
+    position: relative;
+    left: 60px;
+    margin-left: 25px;
+}
+
+#font-dropdown-list{
+  position: absolute;
+}
+
+#divide-line{
+    position: relative;
+    left: 60px;
+    margin-right: -15px;
+}
+
+#main-header-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 20px;
 }
